# mkdocs_simple

./: README.md
docs/: mkdocs.yml  pyproject.toml
docs/docs/: add.md  index.md
mkdocs-simple/: pyproject.toml
mkdocs-simple/mkdocs_simple/: add.py
mkdocs-simple/tests/: test_add.py
