[tool.poetry]
name = "tests"
version = "0.1.0"
description = ""
authors = ["Robert Senseman <rsenseman@squareup.com>"]

[tool.poetry.dependencies]
python = "^3.8"
mkdocs = "^1.4.3"
mkdocstrings = "^0.22.0"
mkdocstrings-python = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
