[tool.poetry]
name = "mkdocs-simple"
version = "0.1.0"
description = ""
authors = ["Robert Senseman <rsenseman@squareup.com>"]
packages = [{include = "mkdocs_simple"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.25.1"
pytest-cov = "^4.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
